--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         <artifactId>JDA</artifactId>
         <version>4.2.0_231</version>
     </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 </dependencies>
 
     <repositories>
